# meos

./: .clang-format  .gitignore  .readthedocs.yml  CMakeLists.txt  DEVELOPMENT.md  DeserializationException_8hpp.html  Deserializer_8hpp.html  GeomPoint_8hpp.html  Interpolation_8hpp.html  LICENSE  MANIFEST.in  PeriodSet_8hpp.html  Period_8hpp.html  README-LEGACY.md  README.md  Range_8hpp.html  SRIDMembers_8hpp.html  STBox_8hpp.html  SerializationException_8hpp.html  Serializer_8hpp.html  TBox_8hpp.html  TInstantFunctions_8hpp.html  TInstantSet_8hpp.html  TInstant_8hpp.html  TSequenceSet_8hpp.html  TSequence_8hpp.html  TemporalComparators_8hpp.html  TemporalDuration_8hpp.html  TemporalSet_8hpp.html  Temporal_8hpp.html  TimestampSet_8hpp.html  about.html  about_8dox.html  annotated.html  classmeos_1_1DeserializationException.html  classmeos_1_1Deserializer.html  classmeos_1_1GeomPoint.html  classmeos_1_1Period.html  classmeos_1_1PeriodSet.html  classmeos_1_1Range.html  (+47 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: documentation.yaml  tests.yml  wheels.yml
capi/: CMakeLists.txt
capi/include/meos/: meos_c.h
capi/source/: meos_c.cpp
cmake/: FindGEOS.cmake  WriteVersionInfo.cmake
documentation/: CMakeLists.txt
documentation/cpp/: Doxyfile  conf.py
documentation/cpp/pages/: about.dox  mainpage.dox
documentation/python/: box.rst  conf.py  environment.yml  index.rst  io.rst  pymeos.rst  quickstart.rst  range.rst  temporal.rst  time.rst
include/meos/: geos.h  geos.hpp
include/meos/io/: DeserializationException.hpp  Deserializer.hpp  SerializationException.hpp  Serializer.hpp  utils.hpp
include/meos/types/box/: STBox.hpp  TBox.hpp
include/meos/types/geom/: GeomPoint.hpp  Geometry.hpp  SRIDMembers.hpp
include/meos/types/range/: Range.hpp
include/meos/types/temporal/: Interpolation.hpp  TInstant.hpp  TInstantFunctions.hpp  TInstantSet.hpp  TSequence.hpp  TSequenceSet.hpp  Temporal.hpp  TemporalComparators.hpp  TemporalDuration.hpp  TemporalSet.hpp
include/meos/types/time/: Period.hpp  PeriodSet.hpp  TimestampSet.hpp
include/meos/util/: serializing.hpp  string.hpp  time.hpp
meos/: CMakeLists.txt
meos/include/meos/io/: DeserializationException.hpp  Deserializer.hpp  ParseException.hpp  Parser.hpp  SerializationException.hpp  Serializer.hpp
meos/include/meos/types/geom/: Geometry.hpp
meos/include/meos/types/range/: Range.hpp
meos/include/meos/types/temporal/: TInstant.hpp  TInstantFunctions.hpp  TInstantSet.hpp  TSequence.hpp  Temporal.hpp
meos/include/meos/types/time/: Period.hpp  PeriodSet.hpp  TimestampSet.hpp
meos/include/meos/util/: string.hpp  time.hpp
meos/src/: geos.c
meos/src/io/: Deserializer.cpp  Parser.cpp  Serializer.cpp  utils.cpp
meos/src/types/geom/: Geometry.cpp
meos/src/types/range/: Range.cpp
meos/src/types/temporal/: TInstant.cpp  TInstantSet.cpp  TSequence.cpp  Temporal.cpp
meos/src/types/time/: Period.cpp  PeriodSet.cpp  TimestampSet.cpp
meos/src/util/: string.cpp  time.cpp
pybind/: CMakeLists.txt  chrono.h  pybind.cpp  test.py  time_module.hpp
pybind/include/: box_module.hpp  common.hpp  io_module.hpp  range_module.hpp  temporal_module.hpp  time_module.hpp
pybind/include/temporal/: common.hpp  temporal.hpp  tinstant.hpp  tinstantset.hpp  tsequence.hpp  tsequenceset.hpp
pybind/source/: pybind.cpp
pymeos/: __init__.py
pymeos/include/: box_module.hpp  chrono.h  common.hpp  geom.hpp  geometry.hpp  io_module.hpp  range_module.hpp  temporal_module.hpp  time_module.hpp
pymeos/include/temporal/: common.hpp  temporal.hpp  temporalset.hpp  tinstant.hpp  tinstantset.hpp  tsequence.hpp  tsequenceset.hpp
pymeos/source/: pybind.cpp
scripts/: prepare_for_build.sh
source/: geos.cpp
source/io/: Deserializer.cpp  Serializer.cpp  utils.cpp
source/types/box/: STBox.cpp  TBox.cpp
source/types/geom/: GeomPoint.cpp  Geometry.cpp  SRIDMembers.cpp
source/types/range/: Range.cpp
source/types/temporal/: Interpolation.cpp  TInstant.cpp  TInstantSet.cpp  TSequence.cpp  TSequenceSet.cpp  Temporal.cpp  TemporalSet.cpp
source/types/time/: Period.cpp  PeriodSet.cpp  TimestampSet.cpp
source/util/: serializing.cpp  string.cpp  time.cpp
test/: CMakeLists.txt
test/python/: test_module_imports.py  test_pymeos.py  utils.py
test/python/box/: test_box.py  test_stbox.py  test_tbox.py
test/python/io/: test_io_module.py
test/python/range/: test_range.py
test/python/temporal/: test_temporal_module.py  test_tinstant.py  test_tinstant_set.py  test_tsequence.py  test_tsequence_set.py
test/python/time/: test_period.py  test_period_set.py  test_time_module.py  test_timestamp_set.py
test/source/: main.cpp
test/source/common/: matchers.hpp  time_utils.cpp  time_utils.hpp  utils.cpp  utils.hpp
test/source/io/: bool.cpp  float.cpp  geom.cpp  int.cpp  period.cpp  periodset.cpp  temporal.cpp  text.cpp  timestamp.cpp  timestampset.cpp  tinstant.cpp  tinstantset.cpp  tsequence.cpp  tsequenceset.cpp
test/source/types/box/: stbox.cpp  tbox.cpp
test/source/types/geom/: geom.cpp
test/source/types/range/: range.cpp
test/source/types/temporal/: tinstant.cpp  tinstantset.cpp  tsequence.cpp  tsequenceset.cpp
test/source/types/time/: period.cpp  periodset.cpp  timestampset.cpp
tests/: CMakeLists.txt  main.cpp
tests/common/: matchers.hpp  time_utils.cpp  time_utils.hpp  utils.cpp  utils.hpp
tests/deserializer/: float.cpp  int.cpp  temporal.cpp  tinstantset.cpp
tests/io/: bool.cpp  float.cpp  geom.cpp  int.cpp  period.cpp  periodset.cpp  temporal.cpp  text.cpp  timestamp.cpp  timestampset.cpp  tinstant.cpp  tinstantset.cpp  tsequence.cpp
tests/parser/: float.cpp  int.cpp  temporal.cpp  timestamp.cpp  tinstant.cpp  tinstantset.cpp  tsequence.cpp
tests/python/: requirements.txt  test.py  test_pymeos.py
tests/types/range/: range.cpp
tests/types/temporal/: tinstant.cpp  tinstantset.cpp  tsequence.cpp
tests/types/time/: period.cpp  periodset.cpp  timestampset.cpp
tools/: print_version.py  write_version_info.py
